# api-bootstrapper-cli

./: .gitattributes  .gitmessage  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: PROGRESS_INDICATORS.md
scripts/: bump.sh  commit.sh  setup-dev.sh
src/api_bootstrapper_cli/: __init__.py  cli.py
src/api_bootstrapper_cli/commands/: add_alembic.py  add_pre_commit.py  add_precommit.py  bootstrap_env.py  init.py
src/api_bootstrapper_cli/core/: environment_service.py  files.py  logger.py  poetry_manager.py  pre_commit_manager.py  precommit_manager.py  protocols.py  pyenv_manager.py  shell.py  uv_dependency_manager.py  uv_python_manager.py  vscode_writer.py
tests/: __init__.py  conftest.py  test_cli.py
tests/e2e/: test_cli_commands.py
tests/integration/: test_bootstrap_flow.py  test_filesystem_operations.py  test_vscode_integration.py
tests/unit/: test_cli.py
tests/unit/commands/: test_add_precommit.py  test_bootstrap_env.py  test_init.py
tests/unit/core/: test_environment_service.py  test_files.py  test_poetry_manager.py  test_pre_commit_manager.py  test_precommit_manager.py  test_pyenv_manager.py  test_shell.py  test_uv_dependency_manager.py  test_uv_python_manager.py  test_vscode_writer.py
